--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,16 @@
 			"web-dir": ".Build/Web",
 			"extension-key": "responsive_content"
 		}
+	},
+	"scripts": {
+		"code": [
+			"@tool:php-cs-fixer"
+		],
+		"tool:php-cs-fixer": [
+			"php-cs-fixer fix --config Resources/Private/Build/PhpCsFixer.php"
+		]
+	},
+	"require-dev": {
+		"friendsofphp/php-cs-fixer": "^2.18"
 	}
 }
